--- a/app/src/main/res/layout/activity_list_customer.xml
+++ b/app/src/main/res/layout/activity_list_customer.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ListCustomer.ListCustomerActivity">
@@ -44,7 +44,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -55,7 +57,7 @@
             android:layout_margin="5dp"
             android:background="@drawable/bg_textfield"
             app:iconifiedByDefault="false"
-            app:queryHint="Search..."/>
+            app:queryHint="Search..." />
 
     </LinearLayout>
 
