--- a/app/src/main/res/layout/activity_banner.xml
+++ b/app/src/main/res/layout/activity_banner.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Banner.BannerActivity"
     android:orientation="vertical">
 
@@ -26,7 +27,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Poster sản phẩm"
+            android:text="Banner quảng cáo"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="bold" />
@@ -51,8 +52,8 @@
 
             <ImageView
                 android:id="@+id/img_HinhAnhPoster"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:background="@drawable/add_image_product" />
 
