--- a/app/src/main/res/layout/activity_list_banner.xml
+++ b/app/src/main/res/layout/activity_list_banner.xml
@@ -27,7 +27,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Danh sách Poster"
+            android:text="Danh sách banner"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="bold" />
