--- a/app/src/main/res/layout/custom_book.xml
+++ b/app/src/main/res/layout/custom_book.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/bg_textfield"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/book_tieude"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_weight="1"
-        android:text="A"
-        android:gravity="center|left"
         android:layout_margin="10dp"
-        android:paddingLeft="20dp"
-        android:textStyle="bold"/>
+        android:layout_weight="1"
+        android:gravity="center|left"
+        android:paddingLeft="10dp"
+        android:text="A"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/book_deletebook"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/delete"/>
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_gravity="center|top|right"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/del" />
 
 </LinearLayout>
