--- a/app/src/main/res/layout/custom_customer.xml
+++ b/app/src/main/res/layout/custom_customer.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@drawable/bg_subadmin"
+        android:background="@drawable/bg_textfield"
         android:orientation="horizontal">
 
         <LinearLayout
