--- a/app/src/main/res/layout/custom_detail_receipt.xml
+++ b/app/src/main/res/layout/custom_detail_receipt.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="x"
-                android:gravity="center|top"
+                android:gravity="center"
                 android:textSize="14sp"
                 android:textColor="@color/black"/>
 
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="10"
-                android:gravity="center|top"
+                android:gravity="center"
                 android:textSize="14sp"
                 android:textColor="@color/black"/>
 
@@ -61,21 +61,31 @@
                 android:layout_height="match_parent"
                 android:text="ten mon an"
                 android:textSize="14sp"
+                android:gravity="center|left"
                 android:textColor="@color/black"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="80dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            >
 
             <TextView
                 android:id="@+id/txt_Detail_Dongia"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="20000"
+                android:layout_weight="1"
                 android:textSize="14sp"
-                android:gravity="right"/>
+                android:gravity="center|right"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=" đ"
+                android:textSize="14sp"
+                android:gravity="center|right"/>
 
         </LinearLayout>
     </LinearLayout>
