--- a/app/src/main/res/layout/custom_poster.xml
+++ b/app/src/main/res/layout/custom_poster.xml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_margin="5dp">
+    android:background="@drawable/bg_textfield"
+    android:layout_margin="5dp"
+    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/poster_img"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"/>
-
-    <TextView
-        android:id="@+id/poster_name"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="ten poster"
-        android:gravity="center|left"
-        android:layout_marginLeft="10dp"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/poster_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|left"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_weight="1"
+            android:hint="Tên poster" />
+
+        <ImageView
+            android:id="@+id/poster_img"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center|left"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/poster_delete"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/delete"/>
-
-
+        android:background="@drawable/del" />
 </LinearLayout>
