--- a/app/src/main/res/layout/custom_product.xml
+++ b/app/src/main/res/layout/custom_product.xml
@@ -7,9 +7,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="120dp"
         android:layout_gravity="center"
         android:gravity="center"
+        android:background="@drawable/bg_subadmin"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -21,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/hinhanh_sanpham"
-                android:layout_width="100dp"
-                android:layout_height="100dp" />
+                android:layout_width="60dp"
+                android:layout_height="60dp" />
 
             <TextView
                 android:id="@+id/tensanpham_sanpham"
@@ -179,13 +180,4 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#e2e2e2"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"/>
 </LinearLayout>
