--- a/app/src/main/res/layout/custom_receipt.xml
+++ b/app/src/main/res/layout/custom_receipt.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="15dp"
     android:orientation="vertical"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="1.5dp">
+    android:padding="5dp"
+    android:background="@drawable/bg_textfield">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:text="Mã hóa đơn: "
-                android:textSize="17dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -34,7 +34,7 @@
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:hint="123456789abcxyz"
-                android:textSize="16dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -49,7 +49,7 @@
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:text="Thời gian: "
-                android:textSize="17dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -59,7 +59,7 @@
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:hint="06/08/1999 22:45:23"
-                android:textSize="16dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -70,11 +70,11 @@
 
             <TextView
                 android:layout_width="120dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:text="Tổng tiền: "
-                android:textSize="16dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -92,7 +92,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:gravity="center|left"
+                android:gravity="center"
                 android:text="đ"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -109,7 +109,7 @@
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:text="Khách hàng: "
-                android:textSize="16dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -119,7 +119,7 @@
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:text="ABCĐSD"
-                android:textSize="16dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
 
@@ -136,7 +136,7 @@
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:text="Trạng thái: "
-                android:textSize="17dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -146,10 +146,10 @@
                 android:layout_margin="5dp"
                 android:gravity="center|left"
                 android:text="Dang xu ly"
-                android:textSize="16dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
 
         </LinearLayout>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
