--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -149,6 +149,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/txt_GiaM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -172,6 +173,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/txt_GiaL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
