--- a/app/src/main/res/layout/activity_list_receipt.xml
+++ b/app/src/main/res/layout/activity_list_receipt.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".List_Receipt.ListReceiptActivity">
@@ -44,7 +45,17 @@
         android:layout_height="300dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <SearchView
+            android:id="@+id/searchViewDonHang"
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/bg_textfield"
+            app:iconifiedByDefault="false"
+            app:queryHint="Search..."/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_receipt"
