--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="22dp"
     android:layout_marginTop="19dp"
     android:layout_marginRight="22dp"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".TestActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,14 +19,11 @@
             android:id="@+id/hinhanh_sanpham"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_margin="5dp" />
+            android:background="@drawable/tradaodaxay" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -33,25 +32,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Trà đào đá xay"
-                android:textColor="@color/gray"
-                android:textSize="13sp"
+                android:textColor="@color/black"
+                android:textSize="14sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Peach Tea"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:textStyle="italic" />
 
             <CheckBox
                 android:id="@+id/chb_spmoi"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:buttonTint="@color/green"
+                android:layout_height="wrap_content"
                 android:text="Sản phẩm mới"
-                android:textColor="@color/gray"
-                android:textSize="11sp" />
+                android:textColor="@color/black"
+                android:textSize="13sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_gravity="left"
             android:orientation="vertical">
 
             <TextView
@@ -73,33 +79,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:text="Giá KM"
-                    android:textSize="11sp" />
-
-                <TextView
-                    android:id="@+id/giakm_sanpham"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10%"
-                    android:textColor="@color/green"
-                    android:textSize="13sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:text="Đã bán"
-                    android:textSize="11sp" />
+                    android:text="Đã bán"/>
 
                 <TextView
                     android:id="@+id/txt_luotmua"
@@ -107,8 +87,13 @@
                     android:layout_height="wrap_content"
                     android:text="1080"
                     android:textColor="@color/green"
-                    android:textSize="13sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="món"/>
 
             </LinearLayout>
 
@@ -119,6 +104,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="#D8D8D8" />
+        android:background="@color/black"/>
+
 </LinearLayout>
