--- a/app/src/main/res/layout/activity_add_info.xml
+++ b/app/src/main/res/layout/activity_add_info.xml
@@ -10,36 +10,31 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/img_BackAddInfo_TTCH"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/back" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="Thông tin cửa hàng"
-            android:textColor="@color/black"
-            android:textSize="19dp"
+            android:text="Thông tin tài khoản"
+            android:textColor="@color/green"
+            android:textSize="23sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/img_SaveTTCH"
-            android:layout_width="30dp"
+        <Button
+            android:id="@+id/btn_Dongy"
+            android:layout_width="80dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/check" />
-
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_luu"
+            android:text="Lưu"
+            android:textAllCaps="false"
+            android:textColor="@color/blue"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <ScrollView
@@ -54,8 +49,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="22dp"
+                android:layout_marginTop="30dp"
                 android:text="Tên cửa hàng"
                 android:textColor="@color/black"
                 android:textSize="17dp" />
@@ -64,9 +59,9 @@
                 android:id="@+id/txt_TenCuaHang"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="22dp"
                 android:background="@drawable/bg_textfield"
                 android:inputType="text"
                 android:hint="Nhập tên cửa hàng ..."
@@ -77,7 +72,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="30dp"
                 android:text="Email"
                 android:textColor="@color/black"
@@ -87,9 +82,9 @@
                 android:id="@+id/txt_EmailCuaHang"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="22dp"
                 android:background="@drawable/bg_textfield"
                 android:hint="Nhập email ..."
                 android:paddingLeft="20dp"
@@ -100,7 +95,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="30dp"
                 android:text="Địa chỉ"
                 android:textColor="@color/black"
@@ -110,9 +105,9 @@
                 android:id="@+id/txt_DiaChiCuaHang"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="22dp"
                 android:background="@drawable/bg_textfield"
                 android:hint="Nhập địa chỉ ..."
                 android:inputType="text"
@@ -124,7 +119,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="30dp"
                 android:text="Số điện thoại"
                 android:textColor="@color/black"
@@ -134,9 +129,9 @@
                 android:id="@+id/txt_SDTCuaHang"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="22dp"
                 android:background="@drawable/bg_textfield"
                 android:hint="Nhập số điện thoại ..."
                 android:paddingLeft="20dp"
@@ -147,7 +142,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="30dp"
                 android:text="Ghi chú"
                 android:textColor="@color/black"
@@ -157,9 +152,9 @@
                 android:id="@+id/txt_GhiChuCuaHang"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="22dp"
                 android:background="@drawable/bg_textfield"
                 android:hint="Nhập ghi chú, lịch làm việc ..."
                 android:paddingLeft="20dp"
