--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -19,7 +19,7 @@
             android:layout_height="35dp"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/back" />
+            android:background="@drawable/ic_outline_keyboard_backspace_24" />
 
         <TextView
             android:layout_width="match_parent"
@@ -60,6 +60,12 @@
                     android:layout_height="100dp"
                     android:layout_gravity="center"
                     android:background="@drawable/add_image_product" />
+
+                <CheckBox
+                    android:id="@+id/chb_spmoi"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:text="Sản phẩm mới"/>
 
                 <TextView
                     android:layout_width="wrap_content"
