--- a/app/src/main/res/layout/activity_infomation.xml
+++ b/app/src/main/res/layout/activity_infomation.xml
@@ -9,35 +9,31 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/img_BackTTCH_Admin"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/back" />
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="Thông tin cửa hàng"
-            android:textColor="@color/black"
-            android:textSize="19sp"
+            android:text="Thông tin tài khoản"
+            android:textColor="@color/green"
+            android:textSize="23sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/img_AddInfo"
-            android:layout_width="30dp"
+        <Button
+            android:id="@+id/btn_Sua"
+            android:layout_width="80dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/edit" />
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_sua"
+            android:text="Sửa"
+            android:textAllCaps="false"
+            android:textColor="@color/purple"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <LinearLayout
