--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -20,7 +20,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/back" />
+            android:background="@drawable/ic_outline_keyboard_backspace_24" />
 
         <TextView
             android:layout_width="match_parent"
@@ -42,22 +42,24 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_width="370dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <SearchView
             android:id="@+id/searchView"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/bg_textfield"
-            app:iconifiedByDefault="false"
-            app:queryHint="Search..." />
+            android:layout_height="match_parent"
+            android:background="@drawable/search"
+            android:inputType="text"
+            android:queryHint="Tìm kiếm ..."
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
+            android:textSize="9sp" />
+
     </LinearLayout>
 
     <LinearLayout
