--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,160 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#ffffff"
     tools:context=".Account.LoginActivity">
 
+    <ImageButton
+        android:id="@+id/img_Quaylai"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/ic_outline_keyboard_backspace_24"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
+        android:text="Đăng nhập"
+        android:textColor="@color/green"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:layout_height="400dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/edt_usernameDN"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/edt_trang"
+            android:hint="Tên đăng nhập"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="20dp"
+            android:textColor="@color/green"
+            android:textSize="15dp" />
+
+        <EditText
+            android:id="@+id/edt_passwordDN"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/edt_trang"
+            android:hint="Mật khẩu"
+            android:inputType="textPassword"
+            android:paddingLeft="20dp"
+            android:textColor="@color/green"
+            android:textSize="15dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="38.3dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="15dp">
+
+            <CheckBox
+                android:id="@+id/cb_Ghinho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Ghi nhớ"
+                android:textColor="@color/green"
+                android:textSize="17sp" />
 
             <TextView
+                android:id="@+id/txt_QuenMK"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="32dp"
-                android:gravity="center_horizontal"
-                android:text="Đăng nhập"
-                android:textColor="@color/black"
-                android:textSize="30sp"
+                android:text="Quên mật khẩu"
+                android:textColor="@color/red"
+                android:textSize="19dp"
                 android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="right|bottom"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="7.3dp"
-                    android:background="@drawable/small_cicle" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <FrameLayout
-                    android:id="@+id/half_circle"
-                    android:layout_width="50dp"
-                    android:layout_height="100dp"
-                    android:layout_alignParentRight="true"
-                    android:background="@drawable/half_circle" />
-            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:orientation="horizontal"
-            android:paddingLeft="14.5dp">
+        <Button
+            android:id="@+id/btn_Dangnhap"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/button_xanh"
+            android:text="Đăng nhập"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-            <View
-                android:layout_width="5.6dp"
-                android:layout_height="225dp"
-                android:background="@color/black" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:layout_marginRight="35.6dp"
-                android:background="@drawable/rectangle">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="225dp"
-                    android:layout_marginLeft="13dp"
-                    android:layout_marginRight="19dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="Xin chào,"
-                        android:textColor="#333232"
-                        android:textSize="20sp"
-                        android:textStyle="italic" />
-
-                    <EditText
-                        android:id="@+id/edt_usernameDN"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="25dp"
-                        android:background="@drawable/bg_textfield"
-                        android:inputType="textEmailAddress"
-                        android:hint="Tên đăng nhập"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="15dp"
-                        android:textColor="@color/black"
-                        android:textSize="16dp" />
-
-                    <EditText
-                        android:id="@+id/edt_passwordDN"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="20dp"
-                        android:background="@drawable/bg_textfield"
-                        android:inputType="textPassword"
-                        android:hint="Mật khẩu"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="15dp"
-                        android:textColor="@color/black"
-                        android:textSize="16dp" />
-
-                    <TextView
-                        android:id="@+id/txt_QuenMK"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:layout_marginTop="22dp"
-                        android:text="Quên mật khẩu ?"
-                        android:textColor="#ff414d"
-                        android:textSize="17sp" />
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="right"
-            android:layout_marginTop="40.3dp"
-            android:layout_marginBottom="16.7dp"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/btn_Dangnhap"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/half_blue_roundshape"
-                android:gravity="center"
-                android:text="Đăng nhập"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="21sp" />
-        </LinearLayout>
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
