--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,13 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#6a6262</color>
+    <color name="black">#FF000000</color>
+    <color name="gray">#6a6262</color>
     <color name="white">#FFFFFF</color>
-    <color name="background">#56c596</color>
-    <color name="red">#FFF44336</color>
+    <color name="green">#B3164C1A</color>
+    <color name="skin">#F5D9A5</color>
+    <color name="yellow">#FFCC37</color>
+    <color name="red">#F35555</color>
+    <color name="blue">#5C9FF5</color>
+    <color name="purple">#9C27B0</color>
 </resources>
